# private-vectordb

./: .gitignore  LICENSE  README.md  install-prerequisites.sh
.github/workflows/: build-image.yaml  bump-chart-version.yaml  lint-and-test.yml  lint-test-charts.yaml  lint-test.yaml  pull-request-main.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: storage-cluster.yaml  storage-common.yaml  storage-toolbox-deployment.yaml
charts/private-vectordb/: CHANGELOG.md  Chart.yaml  values.yaml
charts/private-vectordb/templates/: NOTES.txt  object-bucket-claim.yaml
containers/search-vectors/: pyproject.toml
containers/seed-data/: .env.example  Dockerfile  README.md  hello.py  pyproject.toml
containers/seed-data/src/: main.py
containers/wait-bucket-ready/: .env  .gitignore  Dockerfile  hello.py  pyproject.toml  requirements.txt
containers/wait-bucket-ready/src/: main.py
